[tool.poetry]
name = "geo-k-means"
version = "0.1.0"
description = ""
authors = ["azevedo <azevedoantoniocicero@gmail.com>"]
readme = "README.md"
packages = [{include = "geo_k_means"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
openml = "^0.14.1"
numpy = "^1.26.0"
scipy = "^1.9.0"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythopath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.coverage.run]
omit = [
    "geo_k_means/desempenho.py",
    ]


[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=geo_k_means -vv --ignore=geo_k_means/desempenho.py"
post_test = "coverage html"
